--- a/app/templates/master.html
+++ b/app/templates/master.html
@@ -34,8 +34,8 @@
 
     <div class="jumbotron">
         <div class="container">
-            <h1 class="text-center">Disaster Response Project</h1>
-            <p class="text-center">Analyzing message data for disaster response</p>
+            <h1 class="text-center">Disaster Response Analyzer</h1>
+            <p class="text-center">Analyzing messages for disaster response</p>
             <hr />
 
             <div class="row">
@@ -76,7 +76,7 @@
     </script>
     <div>
         <br>
-        <h3 class="text-center">Dataset worldcloud - Size proportional to word frequency</h3>
+        <h3 class="text-center"></h3>
         <img style="width: 60%;  margin: auto;  display: block;" src="data:image/png;base64, {{ plot_url }}">
     </div>
 </body>
